# Chessboard

./: .gitignore  CMakeLists.txt  Main.cpp  README.md  board.cpp  board.hpp  graphics.cpp  graphics.hpp  piece.cpp  piece.hpp  run.bat
include/: board.hpp  chess_engine_provider.hpp  graphics.hpp  piece.hpp  settings_provider.hpp  text.hpp
src/: Main.cpp  board.cpp  chess_engine_provider.cpp  graphics.cpp  piece.cpp  settings_provider.cpp  text.cpp
